--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "changelog": "git changelog CHANGELOG.md && git add ./ && git commit -m 'update CHANGELOG.md'",
-    "prepublishOnly": "npm run changelog && np --no-cleanup --yolo --no-publish"
+    "prepub": "np --no-cleanup --yolo --no-publish"
   },
   "dependencies": {
     "chalk": "^2.4.1",
